smooth scrolling ready

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
                 <div class="logo"><a class="logo__link" href="/"><span class="logo__icon icon-logo-agency"></span><span class="logo__box-text"><span class="logo__txt">Агентство</span><span class="logo__txt">по банкротству</span></span></a></div>
               </div>
               <div class="grid__item grid__item_xl-indent-inner width-1-1 width-1-2-sm width-1-3-md width-1-4-lg">
-                <div class="header__box-link header__box-link_position_right header__box-link_indent-inner_left"><a class="header__link" href="#map"><span class="header__icon icon-marker"></span><span class="header__txt header__txt_font_sans-serif header__txt_font_bold header__txt_position_bottom">Архангельск</span></a></div>
+                <div class="header__box-link header__box-link_position_right header__box-link_indent-inner_left"><a class="header__link js-smooth-scroll-slow" href="#address"><span class="header__icon icon-marker"></span><span class="header__txt header__txt_font_sans-serif header__txt_font_bold header__txt_position_bottom">Архангельск</span></a></div>
               </div>
               <div class="grid__item grid__item_xl-indent-inner width-1-1 width-1-2-sm width-1-3-md width-1-4-lg width-1-3-xl">
                 <div class="header__box-link header__box-link_position_left"><a class="header__link" href="tel:88182635000"><span class="header__txt header__txt_big header__txt_animation-color">+8 (818) 263-50-00</span></a></div>
@@ -96,7 +96,7 @@
                           <div class="slider-hero__content">
                             <div class="slider-hero__content-top"><span class="slider-hero__txt slider-hero__txt_position">Самые лучшие</span><span class="slider-hero__txt">эксперты!</span></div>
                             <div class="slider-hero__content-bottom">
-                              <div class="slider-hero__box-button"><a class="button button_middle" href="#" tabindex="-1"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
+                              <div class="slider-hero__box-button"><a class="button button_middle js-smooth-scroll" href="#cost" tabindex="-1"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
                             </div>
                           </div>
                         </div>
@@ -104,7 +104,7 @@
                           <div class="slider-hero__content">
                             <div class="slider-hero__content-top"><span class="slider-hero__txt slider-hero__txt_position">Помощь с</span><span class="slider-hero__txt">документами!</span></div>
                             <div class="slider-hero__content-bottom">
-                              <div class="slider-hero__box-button"><a class="button button_middle" href="#" tabindex="-1"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
+                              <div class="slider-hero__box-button"><a class="button button_middle js-smooth-scroll" href="#cost" tabindex="-1"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
                             </div>
                           </div>
                         </div>
@@ -112,7 +112,7 @@
                           <div class="slider-hero__content">
                             <div class="slider-hero__content-top"><span class="slider-hero__txt slider-hero__txt_position">Избавьтесь от долгов</span><span class="slider-hero__txt">совершенно легально!</span></div>
                             <div class="slider-hero__content-bottom">
-                              <div class="slider-hero__box-button"><a class="button button_middle" href="#" tabindex="-1"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
+                              <div class="slider-hero__box-button"><a class="button button_middle js-smooth-scroll" href="#cost" tabindex="-1"><span class="button__txt button__txt_small">Подробная консультация</span></a></div>
                             </div>
                           </div>
                         </div>
@@ -240,7 +240,7 @@
             </div>
           </div>
         </section>
-        <section class="section section-cost">
+        <section class="section section-cost" id="cost">
           <div class="container">
             <div class="section-cost__box-content">
               <div class="section-cost__box-content-top">
@@ -380,7 +380,7 @@
                     <div class="swiper-slide slider-step__slide">
                       <div class="slider-step__content">
                         <div class="slider-step__box-text"><span class="slider-step__title">Подготовка и сбор документов</span><span class="slider-step__txt">Мы соберем и подготовим комплект документов более чем из 17 позиций.&nbsp;<span class="slider-step__txt_position">  Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места,&nbsp;</span><span class="slider-step__txt_position">мы сделаем это за вас!</span></span></div>
-                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
                     <div class="swiper-slide slider-step__slide">
@@ -388,7 +388,7 @@
                         <div class="slider-step__box-text"><span class="slider-step__title">Поможем составить заявления</span><span class="slider-step__txt">
                             Мы накопили обширный опыт и сможем грамотно про анализировать документы.&nbsp;На основе этих документов и проведенного анализа,
                             поможем с Заявлением о признании банкротом.</span></div>
-                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
                     <div class="swiper-slide slider-step__slide">
@@ -396,7 +396,7 @@
                         <div class="slider-step__box-text"><span class="slider-step__title">Подача документов в&nbsp;суд</span><span class="slider-step__txt">
                             Сделаем чтобы суд принял заявление в течении трех&nbsp;дней.&nbsp;После чего состоится первое заседание.
                             На нём будет рассмотрение заявление, и назначен арбитражный управляющий.</span></div>
-                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
                     <div class="swiper-slide slider-step__slide">
@@ -404,7 +404,7 @@
                         <div class="slider-step__box-text"><span class="slider-step__title">Назначение управляющего</span><span class="slider-step__txt">
                             Постараемся чтобы быстро назначали финансового управляющего.&nbsp;Поможем вам направить документы в СРО. Проведём нужные переговоры с СРО.
                             Составим план дальнейших действий.</span></div>
-                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
                     <div class="swiper-slide slider-step__slide">
@@ -412,7 +412,7 @@
                         <div class="slider-step__box-text"><span class="slider-step__title">Реструктуризация долгов</span><span class="slider-step__txt">
                             Наши юристы помогут составить план реструктуризации.&nbsp;Подготовим должника к собранию кредиторов, дадим  необходимые инструкции.
                             Назначим куратора собрания кредиторов.</span></div>
-                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
                     <div class="swiper-slide slider-step__slide">
@@ -420,7 +420,7 @@
                         <div class="slider-step__box-text"><span class="slider-step__title">Переговоры с кредиторами</span><span class="slider-step__txt">
                             На собрании кредиторов проведём переговоры.&nbsp;Представим кредиторам обширный план реструктуризации долгов.
                             Также представим кредиторам отчёт финансового анализа долгов.</span></div>
-                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
                     <div class="swiper-slide slider-step__slide">
@@ -428,7 +428,7 @@
                         <div class="slider-step__box-text"><span class="slider-step__title">Быстрая реализация имущества</span><span class="slider-step__txt">
                             Походатайствуем чтобы реализация имущества правилась быстро.&nbsp;Будем поддерживать контакт с кредиторами.
                             Смотреть чтобы все придерживались плану реструктуризации долгов.</span></div>
-                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
                     <div class="swiper-slide slider-step__slide">
@@ -436,7 +436,7 @@
                         <div class="slider-step__box-text"><span class="slider-step__title">Признание должника банкротом</span><span class="slider-step__txt">
                             Проконтролируем процесс погашения требования кредиторов. &nbsp;Проведем юридически грамотное списание долгов.
                             Добьемся быстрого заключения, признание должника банкротом.</span></div>
-                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button" href="#" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
+                        <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
                   </div>
@@ -509,7 +509,7 @@
             </div>
           </div>
         </section>
-        <section class="section section-guarantees">
+        <section class="section section-guarantees" id="guarantees">
           <div class="container">
             <div class="section-guarantees__box-content">
               <div class="section-guarantees__box-content-top">
@@ -542,7 +542,7 @@
             </div>
           </div>
         </section>
-        <section class="section section-address">
+        <section class="section section-address" id="address">
           <div class="section-address__box-text">
             <div class="section-address__contact"><span class="section-address__title">Вы можете найти нас по&nbsp;адресу:</span><span class="section-address__txt">г. Архангельск ул. Тимме, д. 77</span>
               <div class="section-address__box-link"><a class="section-address__link" href="tel:88182635000"><span class="section-address__txt section-address__txt_big">+8 (818) 263-50-00</span></a></div>
