--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="modal__box-content">
                   <form class="form-feedback" name="formFeedback">
-                    <div class="form-feedback__header"><span class="form-feedback__title">Мы свяжется с вами </span><span class="form-feedback__subtitle">чтобы обговорить финансовые проблемы</span></div>
+                    <div class="form-feedback__header"><span class="form-feedback__title">Мы свяжемся с вами </span><span class="form-feedback__subtitle">чтобы обговорить финансовые проблемы</span></div>
                     <div class="form-feedback__group">
                       <div class="form-feedback__box-field">
                         <input class="form-feedback__field" type="tel" name="phone" pattern="^[0-9\(\)\+\-\s]+$" placeholder="Введите ваш телефон" autocomplete="off" minlength="7" maxlength="20" title="Пример: +8 (818) 263-50-00" required>
@@ -386,7 +386,7 @@
                     <div class="swiper-slide slider-step__slide">
                       <div class="slider-step__content">
                         <div class="slider-step__box-text"><span class="slider-step__title">Поможем составить заявления</span><span class="slider-step__txt">
-                            Мы накопили обширный опыт и сможем грамотно про анализировать документы.&nbsp;На основе этих документов и проведенного анализа,
+                            Мы накопили обширный опыт и сможем грамотно проанализировать документы.&nbsp;На основе этих документов и проведенного анализа,
                             поможем с Заявлением о признании банкротом.</span></div>
                         <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
@@ -395,14 +395,14 @@
                       <div class="slider-step__content">
                         <div class="slider-step__box-text"><span class="slider-step__title">Подача документов в&nbsp;суд</span><span class="slider-step__txt">
                             Сделаем чтобы суд принял заявление в течении трех&nbsp;дней.&nbsp;После чего состоится первое заседание.
-                            На нём будет рассмотрение заявление, и назначен арбитражный управляющий.</span></div>
+                            На нём будет рассмотрение заявления, и назначен арбитражный управляющий.</span></div>
                         <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
                     <div class="swiper-slide slider-step__slide">
                       <div class="slider-step__content">
                         <div class="slider-step__box-text"><span class="slider-step__title">Назначение управляющего</span><span class="slider-step__txt">
-                            Постараемся чтобы быстро назначали финансового управляющего.&nbsp;Поможем вам направить документы в СРО. Проведём нужные переговоры с СРО.
+                            Постараемся чтобы быстро назначили финансового управляющего.&nbsp;Поможем вам направить документы в СРО. Проведём нужные переговоры с СРО.
                             Составим план дальнейших действий.</span></div>
                         <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
@@ -427,7 +427,7 @@
                       <div class="slider-step__content">
                         <div class="slider-step__box-text"><span class="slider-step__title">Быстрая реализация имущества</span><span class="slider-step__txt">
                             Походатайствуем чтобы реализация имущества правилась быстро.&nbsp;Будем поддерживать контакт с кредиторами.
-                            Смотреть чтобы все придерживались плану реструктуризации долгов.</span></div>
+                            Смотреть чтобы все придерживались плана реструктуризации долгов.</span></div>
                         <div class="slider-step__box-button"><a class="button button_middle slider-step__button js-smooth-scroll" href="#guarantees" tabindex="-1"><span class="button__txt">Начать процедуру банкротства</span></a></div>
                       </div>
                     </div>
